--- a/test/fixtures/pull_requests.yml
+++ b/test/fixtures/pull_requests.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: pull_requests
+#
+#  id            :bigint           not null, primary key
+#  branch_name   :string
+#  name          :string
+#  files_changed :text
+#  developer_id  :integer          default(0), not null
+#  ticket_id     :integer          default(0), not null
+#  sub_ticket_id :integer          default(0), not null
+#  comment_id    :integer          default(0), not null
+#  commmit_id    :integer          default(0), not null
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
